Api de solicitud de cuidado funcionando